fixed logo from overflowing on phones, aligned job-container

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,17 @@
-html, body {
+html {
+  min-width: 450px;
   width: 100%;
-  height: 100%;
+  margin:0;
+  padding:0;
+}
+
+body {
+  background: #212121;
+  width: 100%;
+  color: #f1f1f1;
+  font-family: Roboto;
+  margin:0;
+  padding:0;
 }
 
 .mainHeading {
@@ -65,7 +76,6 @@ html, body {
   display: grid;
   margin-block: 3rem;
   grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
-  align-items: center;
   justify-self: center;
   row-gap: 2rem;
   width: 95%;
@@ -98,7 +108,9 @@ html, body {
 .job-item {
   flex-direction: column;
   height: 100%;
+  width: 100%;
   max-width: 95%;
+  justify-self: center;
   background: #303030;
   padding: 10px 10px 0px 10px ;
   border-radius: 10px;
@@ -137,13 +149,13 @@ html, body {
 
 .job-split {
   display: flex;
-  justify-content: space-between;
 }
 
 @media (max-width:600px) {
   .job-split {
     display: grid;
     gap: 1rem;
+    min-width: 95%;
   }
 
   .job-company {
@@ -151,11 +163,11 @@ html, body {
     height: 10rem;
   }
   .job-logo {
-    width: 10rem;
-    height: 10rem;
+    width: 100%;
+    height: 100%;
     img {
-      height: 10rem;
-      width: 10rem;
+      width: 100%;
+      height: 100%;
     }
   }
 }
@@ -191,14 +203,16 @@ img {
   max-width: 20rem;
 }
 
-body {
-  background: #212121;
-  color: #f1f1f1;
-  font-family: Roboto;
-}
+
 
 p {
   margin: 0px;
+}
+
+@media (max-width: 450px) {
+  .job-logo {
+    height: 5rem;
+  }
 }
 
 @media (max-width: 700px) {
@@ -209,12 +223,13 @@ p {
 }
 .job-logo {
   justify-self: center;
+  justify-content: center;
   width: 95%;
   margin-bottom: 1rem;
-
   img {
-    height: inherit;
-    width: 95%;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
   }
 }
 }
